@@ -78,7 +78,10 @@ class SGL_Task_SetupConstants extends SGL_Task
     function run($conf)
     {
         // framework file structure
-        define('SGL_WEB_ROOT',                  $conf['path']['webRoot']);
+        $path = (isset($conf['path']['webRoot']))
+            ? $conf['path']['webRoot']
+            : SGL_PATH . '/www';
+        define('SGL_WEB_ROOT',                  $path);
         define('SGL_LOG_DIR',                   SGL_PATH . '/var/log');
         define('SGL_TMP_DIR',                   SGL_PATH . '/var/tmp');
         define('SGL_CACHE_DIR',                 SGL_PATH . '/var/cache');
