@@ -7,6 +7,7 @@ BUGFIXES
 24-11-05    Fixed long-standing image preview header probs
 
 IMPROVEMENTS
+29-11-05	RSS query more configurable (bluetoad)
 29-11-05	Web root path now configurable from installer
 24-11-05    DB2 support added (Tobias Kuckuck)
 23-11-05    Implemented ability to load default data in installer
